name:                splc
version:             0.1.0.0
synopsis:            Compiler for the sexy programming language
description:         Please see README.md
homepage:            https://github.com/avwhite/splc/
license:             AllRightsReserved
license-file:        LICENSE
author:              Ronan Guillaume, Marius Olariu, Andreas Vinter-Hviid
maintainer:          a.vinterhviid@student.ru.nl
copyright:           2017 Ronan Guillaume, Marius Olariu, Andreas Vinter-Hviid
category:            Compiler
build-type:          Simple
extra-source-files:  README.md src/Scanner.x
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Scanner, Parser.Parser, Parser.Combinators
  build-depends:       base >= 4.7 && < 5, array
  default-language:    Haskell2010
  build-tools:         alex

executable splc-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , splc
  default-language:    Haskell2010

test-suite splc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , splc
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/avwhite/splc
