name:                splc
version:             0.1.0.0
synopsis:            Compiler for the sexy programming language
description:         Please see README.md
homepage:            https://github.com/avwhite/splc/
license:             AllRightsReserved
license-file:        LICENSE
author:              Ronan Guillaume, Marius Olariu, Andreas Vinter-Hviid
maintainer:          a.vinterhviid@student.ru.nl
copyright:           2017 Ronan Guillaume, Marius Olariu, Andreas Vinter-Hviid
category:            Compiler
build-type:          Simple
extra-source-files:  README.md testdata/syntax_valid_spl/*.spl
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Parser, Parser.Parser, Parser.Combinators, Parser.AST, Parser.Output, Parser.Scanner, Semantics.Types, Codegen.Codegen, Codegen.CodeWrite
  build-depends:       base >= 4.7 && < 5, array, containers, monadplus, mtl
  default-language:    Haskell2010

executable splc-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , splc
  default-language:    Haskell2010

test-suite splc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:       base
                     , splc, filepath
                     , tasty, tasty-hunit, tasty-smallcheck, tasty-quickcheck
                     , tasty-auto, smallcheck, directory
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules:       Spec

source-repository head
  type:     git
  location: https://github.com/avwhite/splc
